--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,61 +11,84 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="@dimen/matchConstraints"
-        android:layout_height="@dimen/matchConstraints"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:layout_marginStart="@dimen/imagePaddingSides"
         android:layout_marginEnd="@dimen/imagePaddingSides"
         android:layout_marginTop="@dimen/imagePaddingTop"
         android:layout_marginBottom="@dimen/imagePaddingBottom"
-        android:src="@drawable/veduschaya"
+        android:elevation="@dimen/imageElevation"
+        android:background="@color/black"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        tools:src="@drawable/veduschaya"/>
 
     <TextView
         android:id="@+id/textName"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/matchConstraints"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/nameMargin"
+        android:layout_marginTop="@dimen/nameMarginTop"
         android:textSize="@dimen/nameSize"
-        android:text="@string/name1"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:background="@color/textBG"
+        android:elevation="@dimen/nameElevation"
+
         app:layout_constraintTop_toBottomOf="@id/imageView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintStart_toStartOf="@id/imageView"
+        app:layout_constraintEnd_toEndOf="@id/imageView"
+
+        tools:text="@string/name1"/>
 
     <TextView
-        android:id="@+id/textAuthor"
-        android:layout_width="wrap_content"
+        android:id="@+id/textInfo"
+        android:layout_width="@dimen/matchConstraints"
         android:layout_height="wrap_content"
         android:textSize="@dimen/infoSize"
-        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:background="@color/textBG"
+        android:layout_marginTop="@dimen/infoMarginTop"
+        android:layout_marginStart="@dimen/infoMarginSide"
+        android:layout_marginEnd="@dimen/infoMarginSide"
+        android:elevation="@dimen/infoElevation"
+
         app:layout_constraintTop_toBottomOf="@id/textName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintStart_toStartOf="@id/textName"
+        app:layout_constraintEnd_toEndOf="@id/textName"
+
+        tools:text="@string/author"/>
 
     <Button
         android:id="@+id/buttonPrev"
         android:layout_width="@dimen/buttonSize"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/buttonGap"
-        android:layout_marginBottom="@dimen/buttonPadding"
+        android:layout_marginStart="@dimen/buttonPaddingSide"
+        android:layout_marginBottom="@dimen/buttonPaddingBottom"
         android:text="@string/buttonPrev"
         android:textSize="@dimen/buttonTextSize"
-        app:layout_constraintHorizontal_chainStyle="packed"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/button"
+
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/buttonNext"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <Button
         android:id="@+id/buttonNext"
         android:layout_width="@dimen/buttonSize"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/buttonPadding"
+        android:layout_marginBottom="@dimen/buttonPaddingBottom"
+        android:layout_marginEnd="@dimen/buttonPaddingSide"
         android:text="@string/buttonNext"
         android:textSize="@dimen/buttonTextSize"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/button"
+
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/buttonPrev"
-         />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
