--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="matchConstraints">0dp</dimen>
-    <dimen name="imagePaddingSides">30dp</dimen>
-    <dimen name="imagePaddingTop">60dp</dimen>
-    <dimen name="imagePaddingBottom">200dp</dimen>
+    <dimen name="imageMarginSides">30dp</dimen>
+    <dimen name="imageMarginTop">60dp</dimen>
+    <dimen name="imageMarginBottom">200dp</dimen>
+    <dimen name="imageMarginTopLand">20dp</dimen>
+    <dimen name="imageMarginBottomLand">120dp</dimen>
+    <dimen name="imageMarginSidesLand">20dp</dimen>
     <dimen name="imageElevation">10dp</dimen>
     <dimen name="nameMarginTop">20dp</dimen>
     <dimen name="nameSize">30sp</dimen>
     <dimen name="nameElevation">7dp</dimen>
     <dimen name="infoSize">24sp</dimen>
     <dimen name="infoMarginTop">5dp</dimen>
-    <dimen name="infoMarginSide">20dp</dimen>
     <dimen name="infoElevation">5dp</dimen>
+    <dimen name="textPadding">10dp</dimen>
     <dimen name="buttonSize">150dp</dimen>
-    <dimen name="buttonGap">30dp</dimen>
     <dimen name="buttonPaddingBottom">20dp</dimen>
     <dimen name="buttonPaddingSide">20dp</dimen>
     <dimen name="buttonTextSize">14sp</dimen>
